--- a/uasdm-web/src/main/ng2/src/app/site/component/modal/leaf-modal.component.html
+++ b/uasdm-web/src/main/ng2/src/app/site/component/modal/leaf-modal.component.html
@@ -37,7 +37,7 @@
                   <ul class="list-group row">
 	                <li *ngFor="let item of page.results" class="list-group-item col-xs-3">
 	                  <a class="thumbnail non-clickable">
-	                    <img [src]="defaultImage" alt="Image">
+	                    <img [src]="context + '/net/geoprism/images/thumbnail-default.png'" alt="Image">
 	                    <div class="caption">
 	                      <h4 class="media-heading">{{item.name}}</h4>
 	                    </div>
@@ -55,10 +55,12 @@
 	                      [checked]="item.excludeFromProcess" (change)="toggleExcludeImage($event, item)" />
 	                    <img (click)="enableSelectableImages ? toggleExcludeImage($event, item) : false"
 	                      [ngClass]="{'img-disabled' : item.excludeFromProcess}" 
-                          [src]="thumbnails[item.key] != null ? (thumbnails[item.key] | safeHtml) : defaultImage"
+                          [src]="thumbnails[item.key] != null ? (thumbnails[item.key] | safeHtml) : (context + '/net/geoprism/images/thumbnail-default.png')"
 	                      alt="Image">
 	                    <div class="caption">
-	                      <h4 class="media-heading">{{item.name}}</h4>
+	                      <h4 class="media-heading">
+                            {{item.name}}
+                          </h4>
 	                    </div>
 	                  </a>
 	                </li>
@@ -72,7 +74,7 @@
                       <div class="col-md-10">
                         <h3>
                           {{video.name}} 
-                          <a (click)="handleDownloadFile(video.src)"><i class="fas fa-download"></i></a>
+                          <a (click)="handleDownloadVideo(video.src)"><i class="fas fa-download"></i></a>
                           <a class="pull-right" (click)="closeVideo()"><i class="fa fa-times" aria-hidden="true"></i></a>
                         </h3>
                       </div>
@@ -94,7 +96,7 @@
                     <ul class="list-group row">
 	                  <li *ngFor="let item of page.results" class="list-group-item col-xs-3">
 	                    <a class="thumbnail" (click)="showVideo(item)">
-	                      <img [src]="defaultImage" alt="Image">
+	                      <img [src]="context + '/net/geoprism/images/thumbnail-video.png'" alt="Video">
 	                      <div class="caption">
 	                        <h4 class="media-heading">{{item.name}}</h4>
 	                      </div>
