Fixed bug with forgotpassword-complete link not working

--- a/uasdm-web/src/main/ng2/src/app/core/component/forgotpassword-complete/forgotpassword-complete.component.html
+++ b/uasdm-web/src/main/ng2/src/app/core/component/forgotpassword-complete/forgotpassword-complete.component.html
@@ -1,68 +1,46 @@
-<div>
-  <form #form="ngForm" class="modal-form" (ngSubmit)="form.valid && onSubmit()">    
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="heading">
-          <h1><localize key="forgotpassword-complete.header"></localize></h1>
+
+<div id="app-container" class="container">
+  <div class="row">
+    <div class="col-lg-2"></div>
+    <div class="col-lg-8" *ngIf="!passwordIsReset">
+      <form #form="ngForm" (ngSubmit)="form.valid && onSubmit()" [mustMatch]="['password', 'certainPassword']">
+        <div>
+          <h1>
+            <localize key="forgotpassword-complete.header"></localize>
+          </h1>
         </div>
-        <fieldset>
-          <div class="row-holder">
-            <div *ngIf="!passwordIsReset">            
-<!-- 
-              <div class="label-holder">
-                <label><localize key="forgotpassword-complete.token"></localize></label>
-              </div>
-              <div class="holder" >
-                <span class="text">
-                  <input type="text" [(ngModel)]="token" name="token" required [readonly]="true">
-                </span>
-              </div>            
- -->            
-              <div class="label-holder">
-                <label><localize key="forgotpassword-complete.newPassword"></localize></label>
-              </div>
-              <div class="holder">
-                <span class="text">
-                  <input type="password" [(ngModel)]="newPassword" name="password" #password="ngModel" required minlength="5" maxlength="50" >
-                  <password-strength-bar
-                    [passwordToCheck]="newPassword">
-                  </password-strength-bar>                              
-                </span>
-              </div>
-              <div class="label-holder">
-                <label><localize key="account.certainPassword"></localize></label>
-              </div>          
-              <div class="holder" >
-                <span class="text">
-                  <input type="password" ngModel name="certainPassword" #certainPassword="ngModel" [value]="password"/>
-                </span>
-                <div *ngIf="certainPassword.errors?.equalTo" class="inline-error-message">
-                  <localize key="account.certainPassword.validation"></localize>
-                </div>                                                       
-              </div>                           
-            </div>
-            <div *ngIf="passwordIsReset" class="forgotpassword-complete-password-is-reset">
-              <localize key="forgotpassword-complete.passwordIsReset"></localize>
-            </div>
+        <div class="form-group">
+          <label>
+            <localize key="forgotpassword-complete.newPassword"></localize>
+          </label>
+          <input type="password" [(ngModel)]="newPassword" name="password" #password="ngModel" required minlength="5" maxlength="50">
+          <password-strength-bar [passwordToCheck]="newPassword"> </password-strength-bar>
+        </div>
+        <div class="form-group">
+          <label>
+            <localize key="account.certainPassword"></localize>
+          </label>
+          <input type="password" name="certainPassword" [ngModel]="certainPassword" #certainPassword="ngModel" required />
+          <div *ngIf="certainPassword.errors?.mustMatch" class="inline-error-message">
+            <localize key="account.certainPassword.validation"></localize>
           </div>
-            
-          
-          <div class="row-holder">
-            <div class="label-holder">
-            </div>                    
-            <div class="holder">
-              <div *ngIf="!passwordIsReset" class="button-holder">
-                <input type="button" [value]="'forgotpassword-complete.cancel' | localize" class="btn btn-default" (click)="cancel()" />
-                <input type="submit" [value]="'forgotpassword-complete.submit' | localize" class="btn btn-primary" [disabled]="!(form.valid)" />
-              </div>
-              
-              <div *ngIf="passwordIsReset" class="button-holder" style="margin-top: 10px;">
-                <input type="button" style="margin-top: 10px;" [value]="'forgotpassword-complete.ok' | localize" class="btn btn-primary" (click)="cancel()" />
-              </div>
-            </div>
-          </div>
-        </fieldset>
+        </div>
+        <div *ngIf="!passwordIsReset" class="btn-holder" style="text-align: right;">
+          <input type="button" [value]="'forgotpassword-complete.cancel' | localize" class="btn btn-default" (click)="cancel()" />
+          <input type="submit" [value]="'forgotpassword-complete.submit' | localize" class="btn btn-primary" [disabled]="!(form.valid)" />
+        </div>
+      </form>
+    </div>
+    <div class="col-lg-8" *ngIf="passwordIsReset">
+      <div class="forgotpassword-complete-password-is-reset">
+        <localize key="forgotpassword-complete.passwordIsReset"></localize>
+      </div>
+
+      <div class="btn-holder" style="text-align: right;">
+        <input type="button" style="margin-top: 10px;" [value]="'forgotpassword-complete.ok' | localize" class="btn btn-primary" (click)="cancel()" />
       </div>
     </div>
-  </form>
+    <div class="col-lg-2"></div>
+  </div>
+
 </div>
