--- a/uasdm-web/src/main/ng2/src/app/core/component/forgotpassword/forgotpassword.component.html
+++ b/uasdm-web/src/main/ng2/src/app/core/component/forgotpassword/forgotpassword.component.html
@@ -1,42 +1,32 @@
-<div>
-  <form #form="ngForm" class="modal-form" (ngSubmit)="form.valid && onSubmit()">    
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="heading">
-          <h1><localize key="forgotpassword.header"></localize></h1>
+
+<form #form="ngForm" class="modal-form" (ngSubmit)="form.valid && onSubmit()">
+  <div class="modal-dialog">
+    <div class="modal-content modal-body">
+      <div>
+        <h3>
+          <localize key="forgotpassword.header"></localize>
+        </h3>
+      </div>
+      <hr />
+      <div class="form-group" *ngIf="!emailIsSent">
+        <label>
+          <localize key="forgotpassword.username"></localize>
+        </label>
+        <input type="text" [(ngModel)]="username" name="username" required>
+      </div>
+      <div class="form-group" *ngIf="emailIsSent">
+        <div class="forgotpassword-email-is-sent">
+          <localize key="forgotpassword.emailIsSent"></localize>
         </div>
-        <fieldset>
-          <div class="row-holder">
-            <div *ngIf="!emailIsSent" class="label-holder">
-              <label><localize key="forgotpassword.username"></localize></label>
-            </div>          
-            <div *ngIf="!emailIsSent" class="holder" >
-              <span class="text">
-                <input type="text" [(ngModel)]="username" name="username" required>
-              </span>
-            </div>
-            <div *ngIf="emailIsSent" class="forgotpassword-email-is-sent">
-              <localize key="forgotpassword.emailIsSent"></localize>
-            </div>
-          </div>
-          
-          
-          <div class="row-holder">
-            <div class="label-holder">
-            </div>                    
-            <div class="holder">
-              <div *ngIf="!emailIsSent" class="button-holder">
-                <input type="button" [value]="'forgotpassword.cancel' | localize" class="btn btn-default" (click)="cancel()" />
-                <input type="submit" [value]="'forgotpassword.submit' | localize" class="btn btn-primary" [disabled]="!(form.valid)" />
-              </div>
-              
-              <div *ngIf="emailIsSent" class="button-holder" style="margin-top: 10px;">
-                <input type="button" style="margin-top: 10px;" [value]="'forgotpassword.ok' | localize" class="btn btn-primary" (click)="cancel()" />
-              </div>
-            </div>
-          </div>
-        </fieldset>
+      </div>
+
+      <div *ngIf="!emailIsSent" class="btn-holder" style="text-align: right;">
+        <input type="button" [value]="'forgotpassword.cancel' | localize" class="btn btn-default" (click)="cancel()" />
+        <input type="submit" [value]="'forgotpassword.submit' | localize" class="btn btn-primary" [disabled]="!(form.valid)" />
+      </div>
+      <div *ngIf="emailIsSent" class="btn-holder" style="text-align: right;">
+        <input type="button" style="margin-top: 10px;" [value]="'forgotpassword.ok' | localize" class="btn btn-primary" (click)="cancel()" />
       </div>
     </div>
-  </form>
-</div>
+  </div>
+</form>
