Updated system info

--- a/uasdm-web/src/main/ng2/src/app/admin/component/system/system-info.component.html
+++ b/uasdm-web/src/main/ng2/src/app/admin/component/system/system-info.component.html
@@ -8,8 +8,8 @@
         </h2>
 
         <ul>
-            <li>UASDM Plaform Version: 0.7 (Beta)</li>
-            <li>Open Drone Map (ODM): NodeODM Version 0.3.1</li>
+            <li>UASDM Plaform Version: 0.8 (Beta)</li>
+            <li>Open Drone Map (ODM): v0.9.1</li>
         </ul>
         
     </div>
