Updated system info

--- a/uasdm-web/src/main/ng2/src/app/admin/component/system/system-info.component.html
+++ b/uasdm-web/src/main/ng2/src/app/admin/component/system/system-info.component.html
@@ -4,11 +4,11 @@
     <div id="app-container" class="container">
 
         <h2>
-            UASDM System Information
+            IDM System Information
         </h2>
 
         <ul>
-            <li>UASDM Plaform Version: 0.8 (Beta)</li>
+            <li>IDM Plaform Version: 0.8 (Beta)</li>
             <li>Open Drone Map (ODM): v0.9.1</li>
         </ul>
         
