--- a/uasdm-web/src/main/ng2/src/app/site/component/modal/entity-modal.component.html
+++ b/uasdm-web/src/main/ng2/src/app/site/component/modal/entity-modal.component.html
@@ -11,7 +11,7 @@
   </div>
 
   <div *ngIf="newInstance" class="modal-title-container">
-      <h3 >Add a {{entity.type}}</h3>
+      <h3 >Add new {{entity.type}}</h3>
   </div>
 
   <form #ngForm="ngForm">
