--- a/uasdm-web/src/main/ng2/src/app/admin/component/account/account-invite-complete.component.html
+++ b/uasdm-web/src/main/ng2/src/app/admin/component/account/account-invite-complete.component.html
@@ -53,8 +53,11 @@
           <label>
             <localize key="account.password"></localize>
           </label>
-          <input type="password" [(ngModel)]="user.password" name="password" #password="ngModel" required minlength="5" maxlength="50">
+          <input type="password" [(ngModel)]="user.password" name="password" #password="ngModel" required minlength="5" maxlength="50" passwordValidator>
           <password-strength-bar [passwordToCheck]="user.password"></password-strength-bar>
+          <div *ngIf="password.errors?.passwordStrength" class="inline-error-message">
+            The password must be at least 14 characters in length and must contain at least: Two uppercase letters [A-Z], two lowercase letters [a-z], two digits [0-9], and two special characters [e.g.: !@#$*&]
+          </div>          
         </div>
         <div class="form-group">
           <label>
