--- a/uasdm-web/src/main/ng2/src/app/admin/component/account/account.component.html
+++ b/uasdm-web/src/main/ng2/src/app/admin/component/account/account.component.html
@@ -39,13 +39,15 @@
       </div>
     </div>
     <div class="form-group">
-      <label>
-        <label>Bureau</label>
-      </label>
+      <label>Bureau</label>
       <select [(ngModel)]="account.user.bureau" name="bureau">
         <option></option>
         <option *ngFor="let option of account.bureaus" [value]="option.value">{{option.label}}</option>
       </select>
+    </div>
+    <div class="form-group">
+      <label>Extra Information</label>
+      <textarea class="form-control" rows="5" [(ngModel)]="account.user.information" name="information"></textarea>
     </div>
     <div>
       <h3>
@@ -67,8 +69,11 @@
         <label>
           <localize key="account.password"></localize>
         </label>
-        <input type="password" [(ngModel)]="account.user.password" name="password" #password="ngModel" required minlength="5" maxlength="50">
+        <input type="password" [(ngModel)]="account.user.password" name="password" #password="ngModel" required minlength="14" maxlength="50" passwordValidator>
         <password-strength-bar [passwordToCheck]="account.user.password"></password-strength-bar>
+        <div *ngIf="password.errors?.passwordStrength" class="inline-error-message">
+          The password must be at least 14 characters in length and must contain at least: Two uppercase letters [A-Z], two lowercase letters [a-z], two digits [0-9], and two special characters [e.g.: !@#$*&]
+        </div>
       </div>
       <div class="form-group">
         <label>
