--- a/uasdm-web/src/main/ng2/src/app/core/component/forgotpassword-complete/forgotpassword-complete.component.html
+++ b/uasdm-web/src/main/ng2/src/app/core/component/forgotpassword-complete/forgotpassword-complete.component.html
@@ -13,8 +13,12 @@
           <label>
             <localize key="forgotpassword-complete.newPassword"></localize>
           </label>
-          <input type="password" [(ngModel)]="newPassword" name="password" #password="ngModel" required minlength="5" maxlength="50">
+          <input type="password" [(ngModel)]="newPassword" name="password" #password="ngModel" required minlength="5" maxlength="50" passwordValidator>
           <password-strength-bar [passwordToCheck]="newPassword"> </password-strength-bar>
+          <div *ngIf="password.errors?.passwordStrength" class="inline-error-message">
+            The password must be at least 14 characters in length and must contain at least: Two uppercase letters [A-Z], two lowercase letters [a-z], two digits [0-9], and two special characters [e.g.: !@#$*&]
+          </div>          
+          
         </div>
         <div class="form-group">
           <label>
