--- a/uasdm-web/src/main/ng2/src/app/site/component/projects.component.html
+++ b/uasdm-web/src/main/ng2/src/app/site/component/projects.component.html
@@ -22,7 +22,7 @@
                       <ul class="breadcrumb" style="background-color: white;">
                         <li>
                           <i class="fa fa-angle-left breadcrumb-back-ico" aria-hidden="true"></i>
-                          <a (click)="back(null)" style="color: #007276;">UAS Sites</a>
+                          <a (click)="back(null)" style="color: #007276;">IDM Sites</a>
                         </li>
                         <li *ngFor="let entity of breadcrumbs; last as isLast" [ngClass]="{'active':isLast}">
                           <a *ngIf="!isLast" (click)="back(entity)" style="color: #007276;"> {{entity.name}}</a>
