--- a/uasdm-web/src/main/ng2/src/app/site/component/modal/metadata-modal.component.html
+++ b/uasdm-web/src/main/ng2/src/app/site/component/modal/metadata-modal.component.html
@@ -3,9 +3,8 @@
 </div>
 
 <div class="row">
-    <div class="col-md-2"></div>
-    <div class="col-md-8">
-        <form #ngForm="ngForm">
+    <div class="col-md-12">
+        <form #ngForm="ngForm" class="modal-form">
             <div class="modal-body">
 
                 <div *ngIf="message != null" class="error-container">
@@ -146,7 +145,7 @@
                     </div>
                 </div>
 
-                <div>
+                <div class="button-holder">
                     <button type="button" class="btn btn-default" (click)="bsModalRef.hide()">Cancel</button>
                     <button type="button" [disabled]="!ngForm.valid" class="btn btn-primary"
                         (click)="handleSubmit()">
@@ -156,5 +155,4 @@
             </div>
         </form>
     </div>
-    <div class="col-md-2"></div>
 </div>
