--- a/uasdm-web/src/main/ng2/src/styles/styles.scss
+++ b/uasdm-web/src/main/ng2/src/styles/styles.scss
@@ -129,10 +129,6 @@ tree-node-expander{
   font-size: 18px;
 }
 
-// .panel-heading:hover {
-//   background-color: #e0e0e0;
-// }
-
 
 .breadcrumb {
   padding: 2px;
@@ -286,9 +282,12 @@ a.thumbnail.non-clickable:focus {
     margin-bottom: 0;
 }
 
-.panel-heading.clickable:hover {
-    background-color: #e0e0e0;
+.panel-heading{
+  background-color: #e9e9e9 !important;
 }
+// .panel-heading.clickable:hover {
+//     background-color: #e0e0e0;
+// }
 
 
 
@@ -388,6 +387,8 @@ a.active {
 
 .nav-tabs > li > a:hover {
   background-color: #e4e4e4;
+  cursor: pointer !important;
+  color: #007276 !important;
 }
 
 /* === card component ====== 
