--- a/uasdm-web/src/main/ng2/src/app/site/component/tasks.component.html
+++ b/uasdm-web/src/main/ng2/src/app/site/component/tasks.component.html
@@ -71,7 +71,8 @@
             <div *ngFor="let taskGroup of taskGroups; let idx=index" class="panel panel-default" style="background: none;border: none;">
             
                 <div class="panel-heading clickable" style="margin-top: 20px;background-color: #e9e9e9">
-                  <h4 class="panel-title">
+                  <span [ngClass]="{'success':taskGroup.status === 'Complete','pending':taskGroup.status === 'Pending','fail':taskGroup.status === 'Fail'}" class="dot"></span>
+                  <h4 class="panel-title" style="display: inline-block; vertical-align: middle;">
                     <a data-toggle="collapse" (click)="taskGroup.visible = !taskGroup.visible" [attr.aria-expanded]="!taskGroup.visible"
                       [attr.aria-controls]="'taskGroup'+ idx">
                       <h4>{{taskGroup.label}}</h4>
